--- a/src/weatherApp.css
+++ b/src/weatherApp.css
@@ -3,8 +3,9 @@
     flex-direction: column;
     align-items: center;
     gap: 20px;
-    padding: 10px;
+    padding: 20px;
 
+    width: 100%;
     font-family: "Roboto", serif;
 }
 
@@ -16,11 +17,26 @@ input {
 .current-weather {
     background-color: white;
     border-radius: 20px;
-    padding: 20px;   
+   /*  padding: 20px; */   
     display: flex;
     flex-direction: column;
     align-items: center;
+
+    width: 100%;
 }
+
+.weather-location {
+   width: 100%;
+   padding: 10px;
+}
+
+/* .weather-city {
+    font-size: 1rem;
+}
+
+.weather-state {
+    font-size: 1.4rem;
+} */
 
 .temperature {
     font-size: 4rem;
@@ -34,9 +50,13 @@ input {
 .weather-info {
     display: flex;
     align-items: center;
-    /* justify-content: space-between; */
+    justify-content: space-between;
     gap: 20px;
     margin-block: 10px;
+
+    width: 100%;
+    padding-inline: 20px;
+    
 }
 
 .info-item {
