--- a/src/weatherApp.css
+++ b/src/weatherApp.css
@@ -5,7 +5,7 @@
     gap: 20px;
     padding: 20px;
 
-    width: 100%;
+    width: 400px;
     font-family: "Roboto", serif;
 }
 
@@ -17,7 +17,7 @@ input {
 .current-weather {
     background-color: white;
     border-radius: 20px;
-   /*  padding: 20px; */   
+    /*  padding: 20px; */
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -26,8 +26,8 @@ input {
 }
 
 .weather-location {
-   width: 100%;
-   padding: 10px;
+    width: 100%;
+    padding: 10px;
 }
 
 /* .weather-city {
@@ -44,7 +44,7 @@ input {
 }
 
 .weather-img {
-    width: 50%;    
+    width: 50%;
 }
 
 .weather-info {
@@ -56,7 +56,7 @@ input {
 
     width: 100%;
     padding-inline: 20px;
-    
+
 }
 
 .info-item {
@@ -70,3 +70,22 @@ input {
 .info-icon {
     font-size: 1.5rem;
 }
+
+
+/* @media (min-width: 1200px) {
+    .weather-app-container {
+        width: 400px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+}
+
+@media (min-width: 768px) and (max-width: 1199px) {
+    .weather-app-container {
+        width: 400px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+} */
